--- a/src/css/styleHtml.scss
+++ b/src/css/styleHtml.scss
@@ -10,3 +10,36 @@ body {
     flex-wrap: wrap;
   }
 }
+
+/* Input field container */
+.input-container {
+  display: flex;
+  align-items: center;
+  margin-bottom: 20px;
+
+  #searchInput {
+    width: 300px;
+  }
+
+  input[type="text"] {
+    padding: 10px;
+    border: 6px solid #ccc;
+    border-radius: 4px;
+    font-size: 16px;
+    flex: 1;
+  }
+
+  button {
+    padding: 10px 20px;
+    background-color: #007bff;
+    color: #fff;
+    border: none;
+    border-radius: 9px;
+    cursor: pointer;
+    font-size: 16px;
+
+    &:hover {
+      background-color: #0056b3;
+    }
+  }
+}
