--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -2,7 +2,8 @@ $gridComp: antiquewhite;
 $h3text: #000;
 
 .link-item {
-  width: 250px;
+  width: 500px;
+  height: 350px;
   background-color: $gridComp;
   border-radius: 30px;
   padding: 10px;
@@ -16,22 +17,10 @@ $h3text: #000;
     align-items: center;
     flex-direction: column;
     text-decoration: none;
+    font-size: 1.5em;
   }
   h3 {
     color: $h3text;
     align-items: center;
   }
 }
-
-/* h1 h3 p a {
-  font-size: 3.2em;
-  line-height: 1.1;
-  color: #000;
-} */
-
-/* #app {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
-} */
