--- a/src/css/styleHtml.scss
+++ b/src/css/styleHtml.scss
@@ -1,10 +1,12 @@
 /* variable color */
 $backGround: peru;
+$textColor: #fff;
 /* body */
-body {
+.body {
   background: $backGround;
   .container {
-    margin: 30px 0;
+    color: $textColor;
+    margin: 30px 600px;
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
@@ -13,23 +15,23 @@ body {
 
 /* Input field container */
 .input-container {
-  display: flex;
+  /* display: flex;
   align-items: center;
-  margin-bottom: 20px;
+  margin-bottom: 20px; */
 
-  #searchInput {
+  /* #searchInput {
     width: 300px;
-  }
+  } */
 
-  input[type="text"] {
+  /*  input[type="text"] {
     padding: 10px;
     border: 6px solid #ccc;
     border-radius: 4px;
     font-size: 16px;
     flex: 1;
-  }
+  } */
 
-  button {
+  #prevButton {
     padding: 10px 20px;
     background-color: #007bff;
     color: #fff;
